--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,24 @@ article {
 .eye.eye-right {
     right: 20%;
 }
+
+.eyelash {
+    position: absolute;
+    top: 0;
+    width: 130%;
+    height: 50%;
+    border: 4px solid black;
+    border-radius: 52% 48% 0% 100% / 100% 54% 46% 0%;
+    border-bottom: none;
+}
+
+.eyelash-left {
+    left: -35%;
+    border-right: none;
+}
+
+.eyelash-right {
+    right: -35%;
+    border-right: none;
+    transform: scaleX(-1);
+}
