--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 :root {
-    --hair: rgb(131, 0, 15);
+    --hair: #2E0016;
     --face: #FBCEB1;
     --face-shadow: #E3A996;
     --face-shadow2: #C49282;
     --face-shadow3: #7f5c51;
+    --article-bg: #8977AD;
+    
 }
 
 body {
@@ -18,6 +20,7 @@ article {
     background:
     repeating-linear-gradient(#0003 0 0.125%, #0000 0 0.9875%, #0003 0 10%),
     repeating-linear-gradient(90deg, #0003 0 0.125%, #0000 0 0.9875%, #0003 0 10%);
+    background-color: var(--article-bg);
 }
 
 .face {
@@ -98,19 +101,64 @@ article {
 
 .ear {
     position: absolute;
-    top: 40%;
-    width: 15%;
-    height: 20%;
-    background-color: var(--face);
+    top: 45%;
+    width: 4%;
+    height: 8%;
+    background-color: var(--face-shadow);
 }
 
 .ear-left {
-    left: -10%;
+    left: 26%;
     border-radius: 41% 59% 0% 100% / 35% 23% 10% 66%;
 }
 
 .ear-right {
-    right: -10%;
+    right: 26%;
     border-radius: 41% 59% 0% 100% / 35% 23% 10% 66%;
     transform: scaleX(-1);
+}
+
+.back-hair {
+    position: absolute;
+    top: 21%;
+    left: 27.5%;
+    width: 45%;
+    height: 50%;
+    border-radius: 50%;
+    background-color: var(--hair);
+}
+
+.back-long-hair {
+    position: relative;
+    top: 50%;
+    width: 100%;
+    height: 70%;
+    background-color: var(--hair);
+}
+
+.back-long-hair:before {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    border-bottom: 20px solid var(--article-bg);
+    border-top: 20px solid transparent;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+}
+
+.back-long-hair:after {
+    position: absolute;
+    bottom: 0;
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    border-bottom: 20px solid var(--article-bg);
+    border-top: 20px solid transparent;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
 }
