--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ article {
     transform: scaleX(-1);
 }
 
-.back-hair {
+.hair {
     position: absolute;
     top: 21%;
     left: 27.5%;
@@ -161,4 +161,18 @@ article {
     border-top: 20px solid transparent;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
+}
+
+.bang {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    z-index: 1;
+    width: 70%;
+    height: 80%;
+    background-color: var(--hair);
+    border-radius: 50%;
+    transform: translateX(-70%) rotate(30deg);
+    ;
+    clip-path: ellipse(50% 50% at left);
 }
