--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,15 @@
 
 @keyframes blink {
     0% {
-        background-color: white;
+        display: initial;
     }
 
     50% {
-        background-color: initial;
+        display: none;
     }
     
     100% {
-        background-color: white;
+        display: initial;
     }
 }
 
@@ -119,21 +119,21 @@ article {
 
 .eyebrow {
     position: absolute;
-    top: -40%;
+    top: 25%;
     z-index: 1;
-    width: 130%;
-    height: 40%;
+    width: 25%;
+    height: 5%;
     border: 0.7vmin solid var(--hair);
     border-radius: 50%;
     clip-path: polygon(0 50%, 100% 50%, 100% 0, 0 0);
 }
 
 .eyebrow-left {
-    right: 0;
+    right: 10%;
 }
 
 .eyebrow-right {
-    left: 0;
+    left: 10%;
 }
 
 .nose {
