--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,43 @@
 
 @keyframes blink {
     0% {
-        display: initial;
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+
+    100% {
+        clip-path: polygon(0% 50%, 100% 50%, 100% 50%, 0 50%);
+    }
+}
+
+/* @keyframes eyelash {
+    0% {
+        top: 36%;
+    }
+
+    20% {
+        top: 50%;
+    }
+    
+    30% {
+        top: 36%;
     }
 
     50% {
-        display: none;
+        top: 50%;
     }
-    
+
+    60% {
+        top: 36%;
+    }
+
+    70% {
+        top: 50%;
+    }
+
     100% {
-        display: initial;
+        top: 36%;
     }
-}
+} */
 
 body {
     margin: 0;
@@ -52,6 +78,7 @@ article {
     height: 25%;
     border-radius: 50%;
     background-color: white;
+    animation: blink 0.6s infinite alternate;
 }
 
 .pupil {
@@ -104,6 +131,8 @@ article {
     border: 0.6vmin solid black;
     border-radius: 52% 48% 0% 100% / 100% 54% 46% 0%;
     border-bottom: none;
+    animation: eyelash 3s infinite;
+    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
 }
 
 .eyelash-left {
